#3 complete integration tests